[gd_scene load_steps=7 format=2]

[ext_resource path="res://WorldObjects/Technical/DialogTextBox/DialogTextBox.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/Epilepsy Sans/Resource/EpilepsySans.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/Themes/MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/UI/use_popup_button_image.png" type="Texture" id=4]

[sub_resource type="Theme" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MarginNode/PanelContainer/ButtonHint/Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}

[node name="DialogTextBox" type="Node2D"]
script = ExtResource( 1 )

[node name="MarginNode" type="Node2D" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="MarginNode"]
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource( 3 )

[node name="ButtonHint" type="Control" parent="MarginNode/PanelContainer"]
margin_left = 14.5048
margin_top = 27.3797
margin_right = 14.5048
margin_bottom = 27.3797
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Sprite" type="Sprite" parent="MarginNode/PanelContainer/ButtonHint"]
position = Vector2( 0, -1.81064 )
texture = ExtResource( 4 )
offset = Vector2( 3, 3 )

[node name="MarginContainer" type="MarginContainer" parent="MarginNode/PanelContainer"]
margin_left = 4.5048
margin_top = 4.37967
margin_right = 14.5048
margin_bottom = 27.3797
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource( 2 )
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginNode/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 18.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="MarginNode/PanelContainer/MarginContainer/VBoxContainer"]
margin_bottom = 13.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginNode/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
margin_top = 23.0
margin_bottom = 23.0

[node name="TextTween" type="Tween" parent="."]

[node name="AppearanceTween" type="Tween" parent="."]

[node name="HintButtonAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 1 )
